src/test/ui/issues/issue-51279.stderr
error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:1:14
   |
LL | pub struct X<#[cfg(none)] 'a, #[cfg(none)] T>(&'a T);
   |              ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:1:31
   |
LL | pub struct X<#[cfg(none)] 'a, #[cfg(none)] T>(&'a T);
   |                               ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:5:6
   |
LL | impl<#[cfg(none)] 'a, #[cfg(none)] T> X<'a, T> {}
   |      ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:5:23
   |
LL | impl<#[cfg(none)] 'a, #[cfg(none)] T> X<'a, T> {}
   |                       ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:9:10
   |
LL | pub fn f<#[cfg(none)] 'a, #[cfg(none)] T>(_: &'a T) {}
   |          ^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:9:27
   |
LL | pub fn f<#[cfg(none)] 'a, #[cfg(none)] T>(_: &'a T) {}
   |                           ^^^^^^^^^^^^

error: #[cfg_attr] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:18:6
   |
LL | impl<#[cfg_attr(none, may_dangle)] T> Drop for M<T> {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: #[cfg] cannot be applied on a generic parameter
  --> $DIR/issue-51279.rs:23:23
   |
LL | type Z<#[ignored] 'a, #[cfg(none)] T> = X<'a, T>;
   |                       ^^^^^^^^^^^^

error[E0658]: The attribute `ignored` is currently unknown to the compiler and may have meaning added to it in the future
  --> $DIR/issue-51279.rs:23:8
   |
LL | type Z<#[ignored] 'a, #[cfg(none)] T> = X<'a, T>;
   |        ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0658`.
